# planeEstimator

./: CMakeLists.txt  package.xml  readme.md
include/plane_estimator/: estimator.h  utility.h
launch/: run.launch
src/: estimator.cpp  estimator_node.cpp
src/test/: CMakeLists.txt
src/test/src/: Pose2SLAMExample.cpp  imuExample.cpp  test.cpp
