<package>
  <name>plane_estimator</name>
  <version>0.0.1</version>
  <description> plane estimation package</description>

  <maintainer email="cuhksgl@link.cuhk.edu.hk">SGL</maintainer>
  <!-- <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer> -->
  <!-- <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author> -->

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/usb_cam</url> -->
  <!-- <url type="bugtracker">https://github.com/bosch-ros-pkg/usb_cam/issues</url> -->
  <!-- <url type="repository">https://github.com/bosch-ros-pkg/usb_cam</url> -->

  <!-- <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>ffmpeg</build_depend>
  <build_depend>camera_info_manager</build_depend>

  <run_depend>image_transport</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>std_srvs</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>ffmpeg</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>v4l-utils</run_depend> -->
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <!-- <build_depend>sensor_msgs</build_depend>  -->
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>camera_info_manager</build_depend> -->


  <!-- <run_depend>sensor_msgs</run_depend> 
  <run_depend>camera_info_manager</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- <run_depend>message_runtime</run_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
